--- a/index.html
+++ b/index.html
@@ -5,17 +5,79 @@
   <title>Title</title>
   <link rel="stylesheet" href="style.css">
 
-<!--  Underscore-->
+  <!--  Underscore-->
   <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   <script src="fakespot-recreation.js"></script>
 
-<!--  Semantic UI-->
+  <!--  Google Fonts-->
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Inter">
+
+  <!--  Semantic UI-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-
+  <script type="text/javascript"
+          src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 </head>
 <body>
+<div class="ui borderless topmenu menu">
+  <img
+      src="https://www.fakespot.com/assets/home/color_fakespot-0190751cb545154c935cdd73f099d4b2f00305b1c39f642e2dc3e64d1a60068f.svg">
+  <a class="item">
+    <div class="ui action input">
+      <input type="text" placeholder="https://www.">
+      <button class="ui button">Analyze</button>
+    </div>
+  </a>
+  <a class="right item">
+    <div class="ui compact menu">
+      <div class="ui simple dropdown item">
+        Share the word
+        <i class="dropdown icon"></i>
+        <div class="menu">
+          <div class="item"><i class="facebook icon"></i>Share on Facebook</div>
+          <div class="item"><i class="twitter icon"></i>Share on Twitter</div>
+          <div class="item"><i class="linkedin icon"></i>Share on LinkedIn</div>
+        </div>
+      </div>
+    </div>
+  </a>
+  <!--  Three bars-->
+  <a class="item"><img
+      src="https://www.fakespot.com/assets/home/header-menu-429c1d48bc9ff426b0214e9dcc48f229cefc2c628ebb21f2576223d6069ce109.svg"
+      alt="Header menu"></a>
+</div>
 
+<div id="main-text" class="ui container">
+  <h1>eCommerce without the returns</h1>
+  <p>Fakespot Products and Businesses Below, So You Know Before You Buy</p>
+</div>
+
+
+<div class="ui container">
+  <div id="main-search" class="ui fluid action input">
+    <input type="text" placeholder="https://www.">
+    <button class="ui button">Analyze</button>
+  </div>
+</div>
+<div class="ui container">
+  <div id="lower-icons" class="ui centered container">
+    <img class="logo"
+         src="https://www.fakespot.com/assets/home/ebay-47ef8e1bf92337c4eb15b7da3116f72d5a0016ffb4923320c8bd9b78b3bebd94.png"
+         alt="Ebay">
+    <img class="logo"
+         src="https://www.fakespot.com/assets/home/amazon-logo-9c7fa340e7faf4a096a77236013293a720758859e5a7b1d8ab7d7778cbb8f119.svg"
+         alt="Amazon logo">
+    <img class="logo"
+         src="https://www.fakespot.com/assets/home/bestbuy-logo-a3ea8ddda222a15b6cc86d09fb4660d2798123a071f507b291c082fd60df40ef.svg"
+         alt="Bestbuy logo">
+    <img class="logo"
+         src="https://www.fakespot.com/assets/home/sephora-logo-790e328f3933397de27ed4aee4d0d9fd610731014a8e65192c3c8ad9d9aafeff.svg"
+         alt="Sephora logo">
+    <img class="logo"
+         src="https://www.fakespot.com/assets/home/walmart-logo-61bff6f98f222d9dce24a8e205cc95aa8a2f96f9ce31f06692623a5fb35dccd2.svg"
+         alt="Walmart logo">
+  </div>
+</div>
 </body>
 </html>
