--- a/index.html
+++ b/index.html
@@ -79,5 +79,28 @@
          alt="Walmart logo">
   </div>
 </div>
+
+<div style="margin-top: 100px;" class="ui grid">
+  <div id="footer-row" class="two column row">
+    <div class="column">
+      <img
+          src="https://www.fakespot.com/assets/home/color_fakespot-0190751cb545154c935cdd73f099d4b2f00305b1c39f642e2dc3e64d1a60068f.svg">
+      <p>Copyright 2020 Fakespot Inc</p>
+      <img alt="apple-app"
+           src="https://www.fakespot.com/assets/home/apple_app-d3eb0de9234e272304c3853fc4a469cd1456f5e7611a9f94e0a12dc9991b0f20.svg">
+      <img alt="google-play"
+           src="https://www.fakespot.com/assets/home/google_play-f00b75a0b626deabd75653056f14aeb06d61fb41e6c860bb2c0cc126d282a0be.svg">
+    </div>
+    <div id="right-footer" class="column">
+      <h4>COMPANY</h4>
+      <pre>Fakespot.com&#9;    Careers    &#9;Press    &#9;   Blog</pre>
+      <h4>Support</h4>
+      <pre>Contact&#9;    FAQ&#9;   Terms of Use&#9;   Privacy Policy</pre>
+      <h4>Reviews</h4>
+      <pre>Last Analysis&#9;    Analysis Blog</pre>
+
+    </div>
+  </div>
+</div>
 </body>
 </html>
