--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </div>
 
 <div id="main-text" class="ui container">
-  <h1>eCommerce without the returns</h1>
+  <h1>eCommerce without the returns.</h1>
   <p>Fakespot Products and Businesses Below, So You Know Before You Buy</p>
 </div>
 
